made changes in styles

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -6,3 +6,4 @@ $card-color: #0c4160;
 $card-btn-color: #aea885;
 $card-btn-text: #0c4160;
 $carousel-img-ht: 80vh;
+$description-bgcolor: antiquewhite;
