--- a/styles/main.css
+++ b/styles/main.css
@@ -24,4 +24,8 @@ body {
   height: 80vh;
 }
 
+.container #description {
+  background-color: antiquewhite;
+}
+
 /*# sourceMappingURL=main.css.map */
